[package]
name = "arret-compiler"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Cumming <etaoins@gmail.com>"]

[lib]
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
llvm-sys = "90"
libc = "0.2"
libloading = "0.5"
arret-syntax = { path = "../syntax" }
arret-runtime = { path = "../runtime" }
arret-runtime-syntax = { path = "../runtime-syntax" }
codespan = "0.8"
codespan-reporting = "0.9"
termcolor = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"