[package]
name = "arret-compiler"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Cumming <etaoins@gmail.com>"]

[lib]
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
llvm-sys = "90"
libc = "0.2"
libloading = "0.5"
arret-syntax = { path = "../syntax" }
arret-runtime = { path = "../runtime" }
arret-runtime-syntax = { path = "../runtime-syntax" }
codespan-reporting = "0.9"
termcolor = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[dev-dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dev-dependencies.tokio]
version = "0.2"
features = [
  "rt-core",
  "rt-threaded",
  "blocking",
  "fs",
  "macros",
  "process"
]