[package]
name = "arret-compiler"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Cumming <etaoins@gmail.com>"]

[lib]
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
llvm-sys = "120"
libc = "0.2"
libloading = "0.7"
arret-syntax = { path = "../syntax" }
arret-runtime = { path = "../runtime" }
arret-runtime-syntax = { path = "../runtime-syntax" }
codespan-reporting = "0.11"
crossbeam-channel = "0.5"
termcolor = "1"

[dev-dependencies]
tempfile = "3"
num_cpus = "1.13"