[package]
name = "arret"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Cumming <etaoins@gmail.com>"]

[[bin]]
name = "arret"
path = "main.rs"

[dependencies]
clap = "2"
rustyline = "6"
directories = "2"
ansi_term = "0.12"
codespan = "0.8"
codespan-reporting = "0.8"
arret-syntax = { path = "../syntax" }
arret-compiler = { path = "../compiler" }
