[package]
name = "arret"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Cumming <etaoins@gmail.com>"]
default-run = "arret"

[[bin]]
name = "arret"
path = "main.rs"

[dependencies]
clap = "2"
rustyline = "6"
directories = "2"
ansi_term = "0.12"
codespan = "0.9"
codespan-reporting = "0.9"
arret-syntax = { path = "../syntax" }
arret-compiler = { path = "../compiler" }