[package]
name = "arret-lsp-server"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Cumming <etaoins@gmail.com>"]

[[bin]]
name = "arret-lsp-server"
path = "main.rs"

[dependencies]
# This matches the version in `codespan-reporting`
lsp-types = "0.71"
arret-syntax = { path = "../syntax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.futures]
version = "0.3"
default-features = false
features = [
  "std",
  "async-await"
]

[dependencies.tokio]
version = "0.2"
features = [
  "rt-core",
  "rt-threaded",
  "rt-util",
  "io-driver",
  "io-util",
  "io-std",
  "macros",
  "sync"
]