[package]
name = "arret-lsp-server"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Cumming <etaoins@gmail.com>"]

[[bin]]
name = "arret-lsp-server"
path = "main.rs"

[dependencies]
# This matches the version range in `codespan-lsp`
lsp-types = "0.79"
arret-syntax = { path = "../syntax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tokio]
version = "0.2"
features = [
  "rt-core",
  "rt-threaded",
  "rt-util",
  "io-driver",
  "io-util",
  "io-std",
  "macros",
  "sync"
]