[package]
name = "arret-stdlib"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Cumming <etaoins@gmail.com>"]

[lib]
name = "stdlib"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
arret-syntax = { path = "../../syntax" }
arret-runtime = { path = "../../runtime" }
arret-runtime-syntax = { path = "../../runtime-syntax" }
arret-rfi-derive = { path = "../../rfi-derive" }